--- a/BudTest.Data/BudTest.Data.csproj
+++ b/BudTest.Data/BudTest.Data.csproj
@@ -10,6 +10,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BudTest.IData\BudTest.IData.csproj" />
+    <ProjectReference Include="..\BudTest.IModel\BudTest.IModel.csproj" />
+    <ProjectReference Include="..\BudTest.Model\BudTest.Model.csproj" />
   </ItemGroup>
 
 </Project>
