--- a/BudTest.Console/BudTest.ConsoleApp.csproj
+++ b/BudTest.Console/BudTest.ConsoleApp.csproj
@@ -1,8 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BudTest.Data\BudTest.Data.csproj" />
+    <ProjectReference Include="..\BudTest.IData\BudTest.IData.csproj" />
+    <ProjectReference Include="..\BudTest.IModel\BudTest.IModel.csproj" />
+  </ItemGroup>
 
 </Project>
