--- a/BudTest.Data/BudTest.Data.csproj
+++ b/BudTest.Data/BudTest.Data.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Entity\WorldBankCountry.cs" />
+    <Compile Remove="Entity\WorldBankRegion.cs" />
+    <Compile Remove="WorldBankData.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="System.Runtime.Serialization.Json" Version="4.3.0" />
   </ItemGroup>
 
@@ -12,6 +18,10 @@
     <ProjectReference Include="..\BudTest.IData\BudTest.IData.csproj" />
     <ProjectReference Include="..\BudTest.IModel\BudTest.IModel.csproj" />
     <ProjectReference Include="..\BudTest.Model\BudTest.Model.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Entity\" />
   </ItemGroup>
 
 </Project>
